--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ footer {
 label,
 h1,
 .display-6,
-button {
+button,
+a {
   font-family: "Noto Sans Display", sans-serif;
+}
+
+a {
+  color: #2b6777;
+  text-decoration: none;
 }
